# sigTouch

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
docs/: manual-qa.md
packaging/: README.md  build_macos.sh  sign_macos.sh  sigtouch.spec
packaging/codesign/: README.txt
scripts/: download_models.py  generate_icons.py
sigtouch/: __main__.py  app.py  config.py  vision.py
sigtouch/interaction/: features.py  filters.py  gestures.py  hotkey.py  mapper.py
sigtouch/output/: injector.py
sigtouch/perception/: distance.py  pipeline.py  types.py
sigtouch/platformsupport/: autostart.py  permissions.py  screen.py
sigtouch/ui/: icons.py  lucide.py  native.py  overlay.py  permission_wizard.py  preview.py  theme.py  (+2 more)
tests/: hand_fixtures.py  test_activation_policy.py  test_app_frame_path.py  test_app_permissions.py  test_autostart.py  test_config.py  test_distance.py  test_features.py  test_filters.py  test_gesture_progress.py  test_gestures_pinch.py  test_gestures_symbolic.py  test_hand_fit.py  test_hotkey_format.py  test_injector.py  test_lucide.py  test_mapper.py  test_new_behaviors.py  test_no_emoji.py  test_overlay_geometry.py  test_overlay_topmost.py  test_permission_wizard.py  test_permissions.py  test_pipeline_smoke.py  test_progress_geometry.py  test_select_hand.py  test_select_primary_face.py  test_settings_dialog.py  test_settings_instant.py  test_settings_status.py  test_suspend_gate.py  test_theme.py  test_thumbs_left.py  test_thumbs_up.py  test_vision_sleep.py  test_window_close_contract.py
(+18 files in other folders)
